--- a/public/depart.html
+++ b/public/depart.html
@@ -6,85 +6,166 @@
 <title>배송출발 - The Listen</title>
 <script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.20.0/umd/index.min.js"></script>
 <style>
-  :root{--brand:#007bff;--bg:#f7f9fc;--card:#fff;}
+  :root{--brand:#007bff;--bg:#f7f9fc;--card:#fff;--muted:#6b7280;}
+  *{box-sizing:border-box}
   body{margin:0;background:var(--bg);font-family:"Noto Sans KR",sans-serif}
   header{background:var(--brand);color:#fff;text-align:center;padding:12px;font-weight:900}
-  .wrap{max-width:420px;margin:auto;padding:10px}
-  .card{background:var(--card);border-radius:14px;box-shadow:0 4px 14px rgba(0,0,0,.1);padding:14px;margin-bottom:10px}
-  .btn{display:block;width:100%;border:none;border-radius:10px;padding:12px;font-size:15px;font-weight:700;color:#fff;background:var(--brand);margin-top:8px;cursor:pointer}
+  .wrap{max-width:480px;margin:0 auto;padding:12px}
+  .card{background:var(--card);border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08);padding:14px;margin-bottom:12px}
+  .btn{display:inline-flex;align-items:center;justify-content:center;gap:6px;border:none;border-radius:10px;padding:12px 14px;font-weight:800;color:#fff;background:var(--brand);cursor:pointer}
+  .btn.full{width:100%}
+  .btn.gray{background:#6b7280}
   .btn.green{background:#10b981}
   .btn.orange{background:#f59e0b}
-  input[type="text"]{width:100%;padding:12px;border:1px solid #ddd;border-radius:10px;font-size:15px}
-  video{width:100%;border-radius:10px;background:#000}
-  .list{max-height:180px;overflow:auto;margin-top:10px;border:1px solid #eee;border-radius:10px;padding:6px}
-  .pill{display:inline-block;background:#eef4ff;color:#007bff;border-radius:999px;padding:6px 10px;margin:4px;font-size:14px}
-  .kpi{display:flex;justify-content:space-between;margin:10px 0;font-weight:800}
+  .stack{display:flex;gap:8px}
+  .stack.col{flex-direction:column}
+  input[type="text"]{flex:1;padding:12px;border:1px solid #e5e7eb;border-radius:10px;font-size:15px}
+  video{width:100%;border-radius:12px;background:#000}
+  .kpi{display:flex;justify-content:space-between;margin:8px 0 2px;font-weight:900}
+  .muted{color:var(--muted);font-size:.9rem;margin:6px 0}
+  .pill{display:inline-block;background:#eef4ff;color:#3563ff;border-radius:999px;padding:6px 10px;margin:4px 6px 0 0;font-size:14px}
+  .list{max-height:180px;overflow:auto;border:1px solid #eef2f7;border-radius:10px;padding:8px}
+  .cards{max-height:420px;overflow:auto;border:1px solid #eef2f7;border-radius:12px;padding:8px}
+  .citem{border:1px solid #e5e7eb;border-radius:12px;padding:10px;margin-bottom:8px}
+  .crow{display:flex;justify-content:space-between;gap:8px;align-items:center}
+  .order{min-width:36px;height:36px;border-radius:50%;background:#007bff;color:#fff;display:flex;align-items:center;justify-content:center;font-weight:900}
+  .addr{font-size:.95rem}
+  .hit{outline:2px solid #10b981;box-shadow:0 0 0 4px rgba(16,185,129,.15)}
 </style>
 </head>
 <body>
 <header>🚚 배송출발 (The Listen)</header>
 <div class="wrap">
+
+  <!-- 카메라 + 입력 + 추가 (하나의 UI 그룹) -->
   <div class="card">
-    <video id="preview" playsinline muted></video>
-    <button class="btn" id="btnStart">📸 카메라 실행 (후면)</button>
-    <button class="btn orange" id="btnBack">⬅️ 뒤로가기</button>
+    <div class="stack col">
+      <video id="preview" playsinline muted></video>
+      <div class="stack">
+        <button class="btn" id="btnStart">📸 후면카메라</button>
+        <input id="scanInput" type="text" placeholder="운송장 입력 또는 스캐너(Enter)" />
+        <button class="btn green" id="btnAdd">추가</button>
+      </div>
+      <div class="muted">후면 카메라 인식 + HID 스캐너 입력을 지원합니다.</div>
+    </div>
   </div>
 
+  <!-- 스캔 목록 -->
   <div class="card">
     <div class="kpi"><span>스캔 수량</span><span id="scanCount">0</span></div>
-    <input id="scanInput" type="text" placeholder="운송장 입력 또는 스캐너 입력" />
-    <button class="btn green" id="btnAdd">추가</button>
-    <div class="list" id="scanList"></div>
+    <div class="list" id="scanList" aria-label="스캔 목록"></div>
   </div>
 
+  <!-- 고객카드(최대 1000개 스크롤) -->
   <div class="card">
-    <button class="btn orange" id="btnOptimize">🧭 경로 최적화</button>
-    <button class="btn green" id="btnDispatch">🚀 출발 전송 (지도 이동)</button>
+    <div class="kpi"><span>고객 카드(조남동)</span><span id="custCount">0</span></div>
+    <div class="stack" style="gap:6px;margin-bottom:8px;">
+      <button class="btn orange full" id="btnOptimize">🧭 경로 최적화(순번 부여)</button>
+      <button class="btn full" id="btnDispatch">🚀 출발 전송 → 지도</button>
+      <button class="btn gray full" id="btnBack">⬅️ 뒤로가기</button>
+    </div>
+    <div class="cards" id="cards"></div>
+    <div class="muted">※ 순번은 GPS 거리 기준입니다. 출발 전송 시 map.html에 그대로 반영됩니다.</div>
   </div>
+
 </div>
 
 <script>
+/* ========== 상태 ========== */
 const reader=new ZXing.BrowserMultiFormatReader();
 const video=document.getElementById("preview");
 const scanListDiv=document.getElementById("scanList");
+const cardsDiv=document.getElementById("cards");
 let scanList=JSON.parse(localStorage.getItem("scanList")||"[]");
+let customers=[];
 
-function renderList(){
-  scanListDiv.innerHTML=scanList.map(s=>`<span class='pill'>${s}</span>`).join('');
+/* ========== 스캔 UI ========== */
+function renderScan(){
+  scanListDiv.innerHTML=scanList.map(s=>`<span class="pill">${s}</span>`).join('') || '<div class="muted">스캔 내역이 없습니다.</div>';
   document.getElementById('scanCount').textContent=scanList.length;
   localStorage.setItem("scanList",JSON.stringify(scanList));
   localStorage.setItem("scanned",String(scanList.length));
 }
 document.getElementById('btnStart').onclick=()=>{
   reader.decodeFromVideoDevice(null,video,(res,err)=>{
-    if(res){scanList.unshift(res.text);renderList();}
+    if(res){ onScan(res.text); }
   });
 };
 document.getElementById('btnAdd').onclick=()=>{
-  const v=scanInput.value.trim();
-  if(v){scanList.unshift(v);renderList();scanInput.value='';}
+  const v=scanInput.value.trim(); if(!v) return;
+  onScan(v); scanInput.value='';
 };
 scanInput.addEventListener('keydown',e=>{if(e.key==='Enter'){document.getElementById('btnAdd').click();}});
-document.getElementById('btnBack').onclick=()=>{history.back();};
 
-// 테스트 고객 50명 생성
-function makeCustomers(){
-  const baseLat=37.3795, baseLng=126.8060; const arr=[];
-  for(let i=1;i<=50;i++){
-    const [lat,lng]=[baseLat+(Math.random()-0.5)*0.01, baseLng+(Math.random()-0.5)*0.01];
+/* ========== 고객 50명 자동 생성(조남동) ========== */
+function seedCustomers(n=50){
+  const baseLat=37.3795, baseLng=126.8060;
+  const arr=[];
+  for(let i=1;i<=n;i++){
+    const lat=baseLat+(Math.random()-0.5)*0.01;
+    const lng=baseLng+(Math.random()-0.5)*0.01;
+    const dong=100+Math.floor(i%20); // 100~119동 느낌
+    const ho=100+i;
     arr.push({
-      id:"JONAM"+i, name:"조남고객"+i,
-      phone:"010-"+String(1000+i).padStart(4,'0')+"-"+String(2000+i).padStart(4,'0'),
-      address:`경기도 시흥시 조남동 ${100+Math.floor(i/10)}동 ${100+i}호`,
-      boxes:1+(i%3), lat,lng
+      id:`JONAM-${dong}-${ho}`,
+      name:`조남고객${i}`,
+      phone:`010-${String(1000+i).padStart(4,'0')}-${String(2000+i).padStart(4,'0')}`,
+      address:`경기도 시흥시 조남동 ${dong}동 ${ho}호`,
+      boxes:1+(i%3),
+      lat,lng,
+      order:null
     });
   }
   return arr;
 }
-let customers=makeCustomers();
+function renderCards(focusId=null){
+  document.getElementById('custCount').textContent=customers.length;
+  cardsDiv.innerHTML=customers.map(c=>`
+    <div class="citem ${focusId&&focusId===c.id?'hit':''}" id="row-${c.id}">
+      <div class="crow">
+        <div class="order">${c.order??'-'}</div>
+        <div style="flex:1">
+          <div><b>${c.name}</b> · <span class="addr">${c.address}</span></div>
+          <div class="muted">운송장: ${c.id} · 📞 ${c.phone} · 📦 ${c.boxes}개</div>
+        </div>
+      </div>
+    </div>
+  `).join('');
+  if(focusId){
+    const el=document.getElementById(`row-${focusId}`);
+    if(el){ el.scrollIntoView({behavior:'smooth',block:'center'}); }
+  }
+}
+function bootCustomers(){
+  customers=seedCustomers(50); // 최초 50명
+  renderCards();
+}
 
+/* ========== 스캔 처리: 고객카드 매칭/활성화 ========== */
+function onScan(code){
+  scanList.unshift(code);
+  renderScan();
+  // 운송장으로 고객 찾기 (정확 일치, 없으면 일부 매칭)
+  let hit = customers.find(c=>c.id===code);
+  if(!hit){
+    const part = code.split('-').slice(0,3).join('-');
+    hit = customers.find(c=>c.id.includes(part));
+  }
+  if(hit){
+    // 강조 + 맨 위로 올리기(옵션)
+    customers = customers
+      .filter(c=>c.id!==hit.id)
+      .map(c=>({...c})) // 복제
+    customers.unshift(hit);
+    renderCards(hit.id);
+  } else {
+    alert(`고객을 찾지 못했습니다.\n(운송장: ${code})`);
+  }
+}
+
+/* ========== 경로 최적화(순번 부여) ========== */
 function optimize(){
-  if(!navigator.geolocation) return alert('GPS 불가');
+  if(!navigator.geolocation) return alert('GPS 권한을 허용해 주세요.');
   navigator.geolocation.getCurrentPosition(pos=>{
     const [a,b]=[pos.coords.latitude,pos.coords.longitude];
     const dist=(x1,y1)=>Math.hypot(x1-a,y1-b);
@@ -92,17 +173,30 @@ function optimize(){
     customers.forEach((c,i)=>c.order=i+1);
     localStorage.setItem('deliveriesJSON',JSON.stringify(customers));
     localStorage.setItem('optimizeByGPS','1');
-    alert('🧭 GPS 기준 경로 최적화 완료');
-  });
+    alert('🧭 GPS 기준으로 배송 순서(1~N)가 부여되었습니다.');
+    renderCards();
+  },()=>alert('GPS 정보를 가져올 수 없습니다.'));
 }
-document.getElementById('btnOptimize').onclick=optimize;
-document.getElementById('btnDispatch').onclick=()=>{
+
+/* ========== 출발 전송(지도 연동) ========== */
+function dispatchToMap(){
   localStorage.setItem('deliveriesJSON',JSON.stringify(customers));
   localStorage.setItem('startDispatch','1');
-  alert('🚀 출발 전송 완료 → 지도 페이지로 이동');
+  localStorage.setItem('totalDeliveries', String(customers.length));
+  alert('🚀 출발 전송 완료 → 지도 화면으로 이동합니다.');
   location.href='map.html';
-};
-renderList();
+}
+
+/* ========== 뒤로가기 ========== */
+document.getElementById('btnOptimize').onclick=optimize;
+document.getElementById('btnDispatch').onclick=dispatchToMap;
+document.getElementById('btnBack').onclick=()=>history.back();
+
+/* ========== 초기화 ========== */
+(function init(){
+  renderScan();
+  bootCustomers();
+})();
 </script>
 </body>
 </html>
