--- a/public/depart.html
+++ b/public/depart.html
@@ -4,131 +4,139 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>배송출발 - The Listen</title>
+<script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.20.0/umd/index.min.js"></script>
 <style>
-  :root{--brand:#007bff;--bg:#f7f9fc;--card:#fff;--muted:#6b7280;}
-  *{box-sizing:border-box}
-  body{margin:0;background:var(--bg);font-family:"Noto Sans KR",sans-serif}
-  header{background:var(--brand);color:#fff;text-align:center;padding:12px;font-weight:900}
-  .wrap{max-width:520px;margin:0 auto;padding:12px}
-  .card{background:var(--card);border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08);padding:14px;margin-bottom:12px}
-  .btn{display:inline-flex;align-items:center;justify-content:center;gap:6px;border:none;border-radius:10px;padding:12px 14px;font-weight:800;color:#fff;background:var(--brand);cursor:pointer}
-  .btn.full{width:100%}
-  .btn.gray{background:#6b7280}
-  .btn.green{background:#10b981}
-  .btn.orange{background:#f59e0b}
-  .row{display:flex;gap:8px}
-  .grid2{display:grid;grid-template-columns:1fr 1fr;gap:8px}
-  .kpi{display:flex;justify-content:space-between;margin:8px 0 2px;font-weight:900}
-  .cards{max-height:520px;overflow:auto;border:1px solid #eef2f7;border-radius:12px;padding:8px}
-  .citem{border:1px solid #e5e7eb;border-radius:12px;padding:10px;margin-bottom:8px}
-  .top{display:flex;justify-content:space-between;gap:8px;align-items:center}
-  .order{min-width:36px;height:36px;border-radius:50%;background:#007bff;color:#fff;display:flex;align-items:center;justify-content:center;font-weight:900}
-  .addr{font-size:.95rem}
-  .muted{color:#6b7280}
-  .tile{border:2px dashed #c7d2fe;border-radius:12px;padding:12px;text-align:center;background:#eef2ff;cursor:pointer;font-weight:900}
+:root{--brand:#007bff;--gray:#6b7280;--green:#10b981;--orange:#f59e0b;--red:#ef4444;}
+body{margin:0;font-family:"Noto Sans KR",sans-serif;background:#f7f9fc}
+header{background:var(--brand);color:#fff;text-align:center;padding:12px;font-weight:900}
+.wrap{max-width:480px;margin:auto;padding:12px}
+.card{background:#fff;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08);padding:14px;margin-bottom:12px}
+.btn{flex:1;display:inline-flex;align-items:center;justify-content:center;gap:6px;
+  border:none;border-radius:10px;padding:12px 10px;font-weight:800;color:#fff;cursor:pointer}
+.btn.orange{background:var(--orange)}
+.btn.green{background:var(--green)}
+.btn.blue{background:var(--brand)}
+.cards{max-height:440px;overflow:auto;border:1px solid #eef2f7;border-radius:10px;padding:8px}
+.citem{border:1px solid #e5e7eb;border-radius:12px;padding:10px;margin-bottom:8px}
+.crow{display:flex;justify-content:space-between;align-items:center;gap:6px}
+.order{min-width:36px;height:36px;border-radius:50%;background:#007bff;color:#fff;
+  display:flex;align-items:center;justify-content:center;font-weight:900}
+.phone{color:#007bff;text-decoration:none;font-weight:700}
+.high{border:2px solid var(--red);background:#fff0f0}
+.kpi{display:flex;justify-content:space-between;margin-bottom:6px;font-weight:900}
+.footer{display:flex;gap:8px;margin-top:10px}
+.muted{color:#6b7280;font-size:.9rem;text-align:center}
 </style>
 </head>
 <body>
 <header>🚚 배송출발 (The Listen)</header>
+
 <div class="wrap">
 
-  <!-- 최적경로: 터치 타일 -->
-  <div class="grid2" style="margin-bottom:10px;">
-    <div class="tile" id="tileOptimize">🧭 최적경로 설정</div>
-    <div class="tile" id="tileScanner">📸 스캐너/수기입력</div>
-  </div>
-
-  <!-- 고객카드 -->
+  <!-- 상단 버튼 3개 대칭 -->
   <div class="card">
-    <div class="kpi"><span>고객 카드</span><span id="custCount">0</span></div>
-    <div class="cards" id="cards"></div>
-    <div class="muted" style="margin-top:8px;">※ 고객카드는 운송장/이름/주소만 노출됩니다. 전화는 아이콘으로만 연결됩니다.</div>
+    <div class="footer">
+      <button class="btn orange" id="btnWaybill">📦 운송장 입력</button>
+      <button class="btn green" id="btnOptimize">🧭 최적 경로</button>
+      <button class="btn blue" id="btnDispatch">🚀 출발 전송</button>
+    </div>
   </div>
 
-  <!-- 하단 버튼: 같은 줄 재배치 -->
-  <div class="row">
-    <button class="btn orange" style="flex:1" id="btnScanner">📸 스캐너/입력</button>
-    <button class="btn green" style="flex:1" id="btnDispatch">🚀 출발 전송 → 지도</button>
+  <!-- 고객 카드 -->
+  <div class="card">
+    <div class="kpi"><span>고객 카드(조남동)</span><span id="custCount">0</span></div>
+    <div id="cards" class="cards"></div>
+    <div class="muted">※ 고가품은 <span style="color:#ef4444;">빨간 테두리</span>로 표시됩니다.</div>
   </div>
+
 </div>
 
 <script>
 let customers=[];
 
-// waybill & deliveries 병합
-function loadCustomers(){
-  const wb=JSON.parse(localStorage.getItem('waybillCustomers')||'[]'); // waybill 전용
-  const del=JSON.parse(localStorage.getItem('deliveriesJSON')||'[]');  // depart/map 공용
-  // merge by id (waybill 우선)
-  const map=new Map();
-  del.forEach(d=>map.set(d.id, d));
-  wb.forEach(w=>{
-    if(map.has(w.id)){
-      const old=map.get(w.id);
-      map.set(w.id, {...old, ...w}); // waybill 필드 덮어쓰기
-    } else {
-      // 좌표 없으면 임시 좌표 할당
-      map.set(w.id, {...w,
-        lat: 37.3795+(Math.random()-0.5)*0.01,
-        lng: 126.806+(Math.random()-0.5)*0.01,
-        order: null
-      });
-    }
-  });
-  customers=[...map.values()];
+// 🧩 고객 50명 자동 생성 (고가품 10%)
+function seedCustomers(n=50){
+  const arr=[], baseLat=37.3795, baseLng=126.8060;
+  for(let i=1;i<=n;i++){
+    const lat=baseLat+(Math.random()-0.5)*0.01;
+    const lng=baseLng+(Math.random()-0.5)*0.01;
+    const dong=100+(i%20), ho=100+i;
+    const highValue=Math.random()<0.1; // 10% 고가품
+    arr.push({
+      id:`JONAM-${dong}-${ho}`,
+      name:`조남고객${i}`,
+      phone:`010-${String(1000+i).padStart(4,'0')}-${String(2000+i).padStart(4,'0')}`,
+      address:`경기도 시흥시 조남동 ${dong}동 ${ho}호`,
+      boxes:1+(i%3), highValue, lat,lng,order:null
+    });
+  }
+  return arr;
 }
 
-// 렌더 (운송장/이름/주소 + 전화 아이콘)
-function render(){
+function renderCards(){
   document.getElementById('custCount').textContent=customers.length;
-  const maskPhone=(p)=>p? (p.slice(0,3)+'-****-'+p.slice(-4)) : '';
-  const rows=customers.map((c,i)=>`
-    <div class="citem">
-      <div class="top">
+  document.getElementById('cards').innerHTML=customers.map(c=>`
+    <div class="citem ${c.highValue?'high':''}">
+      <div class="crow">
         <div class="order">${c.order??'-'}</div>
-        <div style="flex:1">
-          <div><b>${c.name||'고객'}</b> · <span class="addr">${c.address||''}</span></div>
-          <div class="muted">📦 ${c.id||''}</div>
+        <div>
+          <div><b>${c.name}</b> ${c.highValue?'🔴':''}</div>
+          <div>${c.address}</div>
+          <div>📦 ${c.boxes}개 · <a href="tel:${c.phone}" class="phone">📞</a></div>
         </div>
-        ${c.phone?`<a href="tel:${c.phone}" title="전화걸기" style="text-decoration:none;font-size:20px">📞</a>`:''}
       </div>
     </div>
   `).join('');
-  document.getElementById('cards').innerHTML=rows || '<div class="muted">고객이 없습니다. 상단 또는 하단의 스캐너/입력 버튼을 눌러 추가하세요.</div>';
 }
 
-// 최적경로(순번 부여)
+// 🚦 경로 최적화
 function optimize(){
-  if(!navigator.geolocation) return alert('GPS 권한을 허용해 주세요.');
+  if(!navigator.geolocation)return alert('GPS 권한 허용 필요');
   navigator.geolocation.getCurrentPosition(pos=>{
     const [a,b]=[pos.coords.latitude,pos.coords.longitude];
     const dist=(x1,y1)=>Math.hypot(x1-a,y1-b);
     customers.sort((x,y)=>dist(x.lat,x.lng)-dist(y.lat,y.lng));
     customers.forEach((c,i)=>c.order=i+1);
-    localStorage.setItem('deliveriesJSON', JSON.stringify(customers));
-    alert('🧭 GPS 기준으로 배송 순서가 부여되었습니다.');
-    render();
-  },()=>alert('GPS 정보를 가져올 수 없습니다.'));
+    localStorage.setItem('deliveriesJSON',JSON.stringify(customers));
+    localStorage.setItem('optimizeByGPS','1');
+    alert('🧭 GPS 기준으로 순번이 설정되었습니다.');
+    voiceGuide();
+    renderCards();
+  });
 }
 
-// 출발 전송 → map.html
+// 🗣️ 순번 음성 안내
+function voiceGuide(){
+  if('speechSynthesis' in window){
+    const msg=new SpeechSynthesisUtterance('배송 순서가 설정되었습니다. 1번 고객부터 시작하세요.');
+    msg.lang='ko-KR';
+    speechSynthesis.speak(msg);
+  }
+}
+
+// 🚀 출발 전송
 function dispatch(){
-  localStorage.setItem('deliveriesJSON', JSON.stringify(customers));
+  const notSent=customers.filter(c=>!c.sent);
+  const sent=JSON.parse(localStorage.getItem('sentCustomers')||'[]');
+  localStorage.setItem('sentCustomers',JSON.stringify(sent.concat(notSent)));
+  localStorage.setItem('deliveriesJSON',JSON.stringify(customers));
   localStorage.setItem('startDispatch','1');
-  localStorage.setItem('totalDeliveries', String(customers.length));
+  alert(`🚀 ${notSent.length}건 출발 전송 완료`);
   location.href='map.html';
+  // depart/waybill 데이터 초기화
+  localStorage.removeItem('scanList');
+  localStorage.removeItem('waybillCustomers');
 }
 
-// 이벤트
-document.getElementById('tileOptimize').onclick=optimize;
-document.getElementById('tileScanner').onclick=()=>location.href='waybill.html';
-document.getElementById('btnScanner').onclick=()=>location.href='waybill.html';
+// 📦 운송장 페이지로 이동
+document.getElementById('btnWaybill').onclick=()=>location.href='waybill.html';
+document.getElementById('btnOptimize').onclick=optimize;
 document.getElementById('btnDispatch').onclick=dispatch;
 
-// 초기화
 (function init(){
-  loadCustomers();
-  render();
+  const saved=JSON.parse(localStorage.getItem('waybillCustomers')||'[]');
+  customers=saved.length?saved:seedCustomers(50);
+  renderCards();
 })();
 </script>
 </body>
